--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', function() {
-      navigator.serviceWorker.register('./sw.js')
-        .then(function(registration) {
-          console.log('✅ Service worker registered with scope:', registration.scope);
-        }).catch(function(error) {
-          console.error('❌ Service worker registration failed:', error);
-        });
-    });
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Solace Stock Alerts</title>
+  <link rel="manifest" href="manifest.json" />
+</head>
+<body>
+  <h2>Solace Real-Time Stock Alerts</h2>
+  <p>Click the button below to enable browser pings for breakout alerts (NCNA, RVYL, etc.):</p>
+  <button onclick="subscribeToAlerts()">Enable Alerts</button>
 
-  function subscribeToAlerts() {
-    Notification.requestPermission().then(function(permission) {
-      if (permission === 'granted') {
-        navigator.serviceWorker.ready.then(function(registration) {
-          registration.showNotification('Subscribed to Solace Alerts!');
-        });
-      } else {
-        alert('Please allow notifications to receive alerts.');
-      }
-    });
-  }
-</script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('./sw.js')
+          .then(function(registration) {
+            console.log('✅ Service worker registered with scope:', registration.scope);
+          }).catch(function(error) {
+            console.error('❌ Service worker registration failed:', error);
+          });
+      });
+    }
+
+    function subscribeToAlerts() {
+      Notification.requestPermission().then(function(permission) {
+        if (permission === 'granted') {
+          navigator.serviceWorker.ready.then(function(registration) {
+            registration.showNotification('Subscribed to Solace Alerts!');
+          });
+        } else {
+          alert('Please allow notifications to receive alerts.');
+        }
+      });
+    }
+  </script>
+</body>
+</html>
