--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Solace Stock Alerts</title>
   <link rel="manifest" href="manifest.json" />
 
-  <!-- ✅ OneSignal v16 SDK (Live Push Ready) -->
+  <!-- ✅ OneSignal v16 SDK – Corrected and Final -->
   <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
   <script>
     window.OneSignalDeferred = window.OneSignalDeferred || [];
