--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Solace Stock Alerts</title>
@@ -16,6 +19,38 @@
       });
     });
   </script>
+</head>
+<body>
+  <h2>Solace Real-Time Stock Alerts</h2>
+  <p>Click the button below to enable browser pings for breakout alerts (NCNA, RVYL, etc.):</p>
+  <button onclick="subscribeToAlerts()">Enable Alerts</button>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('./sw.js')
+          .then(function(registration) {
+            console.log('✅ Service worker registered with scope:', registration.scope);
+          }).catch(function(error) {
+            console.error('❌ Service worker registration failed:', error);
+          });
+      });
+    }
+
+    function subscribeToAlerts() {
+      Notification.requestPermission().then(function(permission) {
+        if (permission === 'granted') {
+          navigator.serviceWorker.ready.then(function(registration) {
+            registration.showNotification('Subscribed to Solace Alerts!');
+          });
+        } else {
+          alert('Please allow notifications to receive alerts.');
+        }
+      });
+    }
+  </script>
+</body>
+</html>
 </head>
 <body>
   <h2>Solace Real-Time Stock Alerts</h2>
